# soselh-registracia

./: .dockerignore  .env.example  .gitignore  Dockerfile  build_release.sh  docker-compose.yml
backend/: Cargo.toml  Config.toml.example
backend/migrations/2025-11-23-213759_create_messages/: down.sql  up.sql
backend/migrations/2025-12-09-193652_create_voting_system/: down.sql  up.sql
backend/migrations/2025-12-10-225500_create_presenter_sessions/: down.sql  up.sql
backend/migrations/2026-01-07-134836-0000_create_registration_system/: down.sql  up.sql
backend/migrations/2026-01-07-145716-0000_add_admin_sessions/: down.sql  up.sql
backend/migrations/2026-01-09-100000_add_confirmed_to_registrations/: down.sql  up.sql
backend/src/: config.rs  db.rs  main.rs  models.rs  schema.rs
backend/src/routes/: contact.rs  mod.rs
backend/src/routes/registration/: admin.rs  client.rs  mod.rs
backend/src/routes/voting/: admin.rs  client.rs  mod.rs
frontend/: astro.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/src/components/: FancyCheckbox.astro  Footer.astro  Header.astro  HeroCarousel.astro  IntroSection.astro  Navbar.astro  OfferSection.astro  ScrollTop.astro  StatsSection.astro
frontend/src/icons/: Calendar.astro  Check.astro  Clock.astro  Envelope.astro  Logo.astro  Phone.astro  Trash.astro
frontend/src/layouts/: Layout.astro
frontend/src/lib/: api.ts
frontend/src/pages/: 404.astro  about.astro  contact.astro  documents.astro  enter.astro  index.astro  news.astro  offer.astro  (+4 more)
load-test/: Cargo.toml
load-test/src/: main.rs
(+30 files in other folders)
