[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_ws = "0.1.0"
tokio = { version = "1", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1.6", features = ["mysql", "r2d2", "chrono"] }
diesel_migrations = "2.1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["diesel_mysql"]
